syntax = "proto3";

package users;

option go_package = "/users";

  
service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
    rpc AuthUser (AuthUserRequest) returns (AuthUserResponse){}

}

message AuthUserRequest {
    string number = 1;
    string password = 2;
}

message AuthUserResponse {
    int64 id_users = 1;
}

  
message CreateUserRequest {
    string number = 1;
    string password = 2;
    string name = 3;
    string lastname = 4;
}

message CreateUserResponse {
}